# JinGo

./: CMakeLists.txt  README.md  README_zh.md
cmake/: Dependencies-Xray.cmake  Extension-PacketTunnel.cmake
docs/: 01_ARCHITECTURE.md  01_ARCHITECTURE_zh.md  02_BUILD_GUIDE.md  02_BUILD_GUIDE_zh.md  03_DEVELOPMENT.md  03_DEVELOPMENT_zh.md  04_WHITE_LABELING.md  04_WHITE_LABELING_zh.md  05_TROUBLESHOOTING.md  05_TROUBLESHOOTING_zh.md  06_PLATFORMS.md  06_PLATFORMS_zh.md  07_PANEL_EXTENSION.md  07_PANEL_EXTENSION_zh.md
resources/qml/pages/: ConnectionPage.qml
resources/translations/: jingo_en_US.qm  jingo_en_US.ts  jingo_fa_IR.ts  jingo_km_KH.ts  jingo_my_MM.ts  jingo_ru_RU.qm  jingo_ru_RU.ts  jingo_vi_VN.qm  jingo_vi_VN.ts  jingo_zh_CN.qm  jingo_zh_CN.ts  jingo_zh_TW.qm  jingo_zh_TW.ts
src/: main.cpp
src/models/: SubscriptionListModel.cpp
src/panel/: V2BoardProvider.cpp  V2BoardProvider.h
src/ui/: SystemTrayManager.cpp
src/viewmodels/: ConnectionViewModel.cpp  ConnectionViewModel.h  LoginViewModel.cpp  RegisterViewModel.cpp  ServerListViewModel.cpp  ServerListViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h
